Bug 106725 - Values get overwritten when slide bar is moved (gtk3)
Summary: Values get overwritten when slide bar is moved (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-23 17:22 UTC by Fakabbir amin
Modified: 2017-06-09 16:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bug being reproduced. (143.16 KB, image/png)
2017-03-23 17:22 UTC, Fakabbir amin
Details
columns dialog (48.38 KB, image/png)
2017-04-04 13:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fakabbir amin 2017-03-23 17:22:12 UTC
Created attachment 132106 [details]
Bug being reproduced.

When the slide bar is moved it overwrite on the value present before thus making the value poorly readable.
Steps to reproduce
-Open LO Writer
-Go step by step to Insert->Shape->Line->Line
-Create a line and select it
-Go to Format->Textbox and Area.
-Go to "Gradient" Option
-Uncheck Increment (Automatic) and move the slider

 
Version: 5.3.0.3
Build ID: 5.3.0-2
CPU Threads: 4; OS Version: Linux 4.9; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Buovjaga 2017-03-29 14:08:07 UTC
Not reproduced.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 595e3971b130addbc6e5b749f53fc681fa6bc031
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 27th 2016
Comment 2 Xisco Faulí 2017-03-29 15:09:20 UTC
Reproduced in

Version: 5.4.0.0.alpha0+
Build ID: 6152bf9ee9b2e348dee854921a5a5db1cfc72995
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

Can be easily reproduced in Column tab when changing column value and width values become unreadable

not reproduced in gtk2
Comment 3 Caolán McNamara 2017-03-31 11:25:10 UTC
I don't see this in my local 5-3 build

caolanm->fakabbir: what distribution are you using and what is the version of gtk3 (if fedora, e.g. rpm -q gtk3 if debian/ubunto dpkg -l libgtk-3-0)

caolanm->xisco: re "Can be easily reproduced in Column tab when changing column value and width values become unreadable", what column tab are we talking about here ?
Comment 4 Fakabbir amin 2017-04-03 12:16:27 UTC
(In reply to Caolán McNamara from comment #3)
> I don't see this in my local 5-3 build
> 
> caolanm->fakabbir: what distribution are you using and what is the version
> of gtk3 (if fedora, e.g. rpm -q gtk3 if debian/ubunto dpkg -l libgtk-3-0)
> 
> caolanm->xisco: re "Can be easily reproduced in Column tab when changing
> column value and width values become unreadable", what column tab are we
> talking about here ?

Antergos OS, and gtk3.22
Comment 5 Caolán McNamara 2017-04-03 12:46:36 UTC
Seeing as that's the same version I have, I suspect the issue is with the default theme rather than the gtk3 version. I'm guessing the default theme is NuMix or something like that. Assuming gnome-tweak-tool is available on the ArchLinux-derived Antergos then see if changing theme to Adwita makes a difference. If it does then we know its a theming issue.
Comment 6 Fakabbir amin 2017-04-04 06:28:45 UTC
(In reply to Caolán McNamara from comment #5)
> Seeing as that's the same version I have, I suspect the issue is with the
> default theme rather than the gtk3 version. I'm guessing the default theme
> is NuMix or something like that. Assuming gnome-tweak-tool is available on
> the ArchLinux-derived Antergos then see if changing theme to Adwita makes a
> difference. If it does then we know its a theming issue.

Hmm, You are right about theme, it works well with (In reply to Caolán McNamara from comment #5)
> Seeing as that's the same version I have, I suspect the issue is with the
> default theme rather than the gtk3 version. I'm guessing the default theme
> is NuMix or something like that. Assuming gnome-tweak-tool is available on
> the ArchLinux-derived Antergos then see if changing theme to Adwita makes a
> difference. If it does then we know its a theming issue.

Hmm, You are right about about that, problem disappears when theme changed to Adwita :) .
Comment 7 Caolán McNamara 2017-04-04 13:08:11 UTC
I installed Antergos 17.4 x86_64 LiveCD under virtualbox and ran my local 5-3 build of gtk3 LibreOffice and didn't see a problem under the default "Numix-Frost-Light".
Comment 8 Xisco Faulí 2017-04-04 13:50:09 UTC
> caolanm->xisco: re "Can be easily reproduced in Column tab when changing
> column value and width values become unreadable", what column tab are we
> talking about here ?

Sorry, I missed you comment..

1. Right click -> Page
2. Columns tab
3. Increase/Decrease column textbox
Comment 9 Xisco Faulí 2017-04-04 13:50:51 UTC
Created attachment 132324 [details]
columns dialog
Comment 10 Xisco Faulí 2017-04-04 13:53:27 UTC
I use Ambiance under Ubuntu 16.10
Comment 11 Caolán McNamara 2017-04-04 15:34:48 UTC
I can reproduce that and fix it, I'll assume its all the same thing
Comment 12 Commit Notification 2017-04-04 17:57:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f0f2278662e29d054690a85bad6583b5c65f918

Resolves: tdf#106725 paint default window bg before spin button bg

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2017-04-10 14:23:06 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a9eff02e49c11787810b61b23f1d74b5a9e9952&h=libreoffice-5-3

Resolves: tdf#106725 paint default window bg before spin button bg

It will be available in 5.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2017-06-09 10:00:19 UTC
Hello Caolán,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?