Resolves: tdf#106725 paint default window bg before spin button bg

Change-Id: I0c7f982c3a47f45d022271eba69ebed896288d78